--- a/public/success.html
+++ b/public/success.html
@@ -13,7 +13,7 @@
     <p>Redirecting to dashboard.....</p>
     <script>
         setTimeout(() => {
-            window.location = "http://127.0.0.1:3000/user/dashboard"
+            window.location = "http://localhost:3000/user/dashboard"
         }, 2000)
     </script>
 </body>
