--- a/public/success.html
+++ b/public/success.html
@@ -13,8 +13,8 @@
     <p>Redirecting to dashboard.....</p>
     <script>
         setTimeout(() => {
-            window.location = "http://localhost:3000/user/dashboard"
-        }, 2000)
+            window.location = "https://adding-google-auth-bohubrihi-ecom.netlify.app/"
+        }, 1000)
     </script>
 </body>
 
