--- a/public/success.html
+++ b/public/success.html
@@ -10,10 +10,10 @@
 
 <body>
     <h1>Payment Successful!</h1>
-    <p>Redirecting to dashboard.....</p>
+    <p>Redirecting to Homepage.....</p>
     <script>
         setTimeout(() => {
-            window.location = "https://adding-google-auth-bohubrihi-ecom.netlify.app/"
+            window.location = "https://bohubrihi-ecommerce-assignment.netlify.app/"
         }, 1000)
     </script>
 </body>
